Fix linux run options