@@ -112,6 +112,12 @@ installDist.finalizedBy(installAfter)
 
 startScripts {
     doLast {
+        var unixJVMOpts = [
+                "-Dfile.encoding=UTF-8",
+                "-Xmx4G",
+                "--add-opens=java.base/java.nio=ALL-UNNAMED",
+                "--add-opens",
+                "java.base/java.nio=ALL-UNNAMED"]
         unixScript.text = unixScript.text.replace('APP_NAME="desktop"', '''
 cd $APP_HOME
 
@@ -119,7 +125,7 @@ JAVA_HOME=./jre
 export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:./lib
 
 APP_NAME="desktop"
-''')
+''').replace('DEFAULT_JVM_OPTS=\'"-Dfile.encoding=UTF-8"\'', "DEFAULT_JVM_OPTS=\"${unixJVMOpts.join(' ')}\"")
     }
 }
 
